djr8/css/style.css
@keyframes swell {
	50% {
		font-size: 3rem;
	}
}


html {
  position: relative;
  min-height: 100%;
}
body {
	background-color: #000000;
	/*font-family: 'Roboto', san-serif;*/
	font-family: 'Pompiere', cursive; 
	min-height: 100vh;
}

.nav-link {
	font-size: 1.5rem;
}
footer {
	background-image: linear-gradient(#b60000, #000 70%);
}
.footer-icon{
	font-size: 2rem;
	color: #fff;
}

/* INDEX PAGE */
.enter {
	color: #fff;
	font-size: 2.5rem;
	animation: swell 2s infinite;
}
.enter:hover {
	color: #fff;
	text-decoration: none;
}
/* INDEX PAGE END */

/* MAIN PAGE */
nav {
	background: #b60000;
	box-shadow: 0 0 5px #000;
}
.jumbo-content {
	position: relative;
}

.carousel-item {
	width: 100%;
	height: 50vh;
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center;
}
.slide1 {
	background-image: url('../img/dj_3-resize.jpeg');
}
.slide2 {
	background-image: url('../img/scratchingb&w-resize.jpg');
}
.slide3 {
	background-image: url('../img/lights.jpg');
}
.overlay {
	position: absolute;
	top:0;
	left:0;
	width: 100%;
	height: 100%;
	padding-top: 35%;
}

.panel-container {
	min-height: 75vh;
}
.image-container {
	position: relative;
}
.text-sections, .panel a {
	color: #fb0200;
	font-size: 2.5rem;
	font-family: 'Pompiere', cursive;
}
.panel a {
	display: block;
	width: 100%;
	height: 100%;
}
.panel a:hover {
	font-size: 4rem;
	text-decoration: none;
}
.text-overlay {
	position: absolute;
	top: 10px;
	right: 25px;
}

.panel {
	background-size: cover;
	background-repeat: no-repeat;
	flex: 1;
	text-align: left;
}
.panel:hover {
	flex: 3;
	text-align: right;
}
.area1 {
	background-image: url('../img/superfly.jpg');
}
.area2 {
	background-image: url('../img/nxt.jpg');
}
.area3 {
	background-image: url('../img/havana-crop.jpg');
}
.area4 {
	background-image: url('../img/dj_1.jpeg');
}

/* MAIN PAGE END*/

/* BIO PAGE */
.bio-body {
	background: repeating-linear-gradient(
  135deg,
  #b60000,
  #b60000 5px,
  /* #000 10px, */
  #000 50px
);
}
.bio-page {
	background-image: url('../img/dj_2.jpeg');
	background-repeat: no-repeat; 
	height: 90vh;
}
.text {
	background: #C7D6EB;
	color: #b60000;
	font-size: 2.3rem;
	width: 75%;
}
.text-sm {
	background: none;
	width: 60%;
	text-shadow: .5px .5px 0 #fff;
}
.bio-body .btn {
	color: #b60000;
	border: 5px solid #b60000;
	font-size: 1.7rem;
}
.bio-body .btn:hover {
	color: #fff;
	background: #b60000;
}
/* BIO PAGE END */

/* EVENTS PAGE */
.main-page-container {
	background-image: url(../img/scratchingb&w.jpg);
	background-repeat: no-repeat;
	background-size: cover;
	background-position: top center;
	min-height: 80vh;
}
.table {
	color: #fe0000;
	border: 2px solid #000;
	border-radius: 5%;
	background-color: rgba(182, 0, 0, 0.2);
}

/* EVENTS PAGE END */
/* EVENT CALENDAR */
.events {
	width: 100%;
}
.events thead {
	background: #b60000;
	border-radius: 10px;
}
.events tbody {
	background: rgba(182, 0, 0, 0.4);
}
th, td {
	color: #fff;
	font-size: 1.3rem;
	padding: 0.5rem;
}
tbody td {
	border-top: 1px solid #b60000;	
}
table th:first-child{
  border-radius:10px 0 0 0;
}

table th:last-child{
  border-radius:0 10px 0 0;
}
/* EVENT CALENDAR END */

/* PACKAGES PAGE */
.packages-page {
	background: repeating-linear-gradient(
  135deg,
  #b60000,
  #b60000 5px,
  /* #000 10px, */
  #000 50px
);
	padding-top: 60px;
}
.packages-page h1 {
	color: whitesmoke;
}
#packages .card{
	background: rgba(255, 255, 255, 0.9);
	margin-bottom: 25px;
}
#packages .card-header {
	background-color: #b60000;
}
#packages .card-body {
	font-size: 1.3rem;
}
#packages .btn {
	color: #b60000;
	font-size: 1.5rem;
}
#packages .btn:hover {
	background: #b60000;
	color: #fff;
}
.platinum {
	color: #fff;
}
.silver {
	color: #c0c0c0;
}
/* PACKAGES PAGE END */

/*MEDIA QUERIES*/
@media (min-width: 500px) {
	.overlay {
		padding-top: 10%;
	}
	.hidden-md {
		display: none;
	}
	.slide2 {
		background-position: bottom center;
	}
}

@media (max-width: 1000px) {
	#packages .card-deck {
		display: block;
		width: 100%;
	}
}

@media (min-width: 768px) {
	.nav-logo {
	width: 125px;
	}
	.carousel-item {
		height: 500px;
	}
	#packages .card-body {
		font-size: 1.7rem;
	}
}

@media (min-width: 992px) {
	.main-page-container {
		min-height: 150vh;
	}
	footer {
		font-size: 1.5rem;
	}
	.footer-icon{
		font-size: 5rem;
		padding: 50px !important;
	}
}

